chore: fix nav item alignment

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -128,7 +128,7 @@ $hero-body-padding: 4rem 1.5rem
 @import "nav"
 
 *, *::before, *::after 
-  max-width: 100%
+  max-width: 100vw
 
 .has-extra-top-margin
   margin-top: 1.5rem
@@ -166,7 +166,6 @@ $hero-body-padding: 4rem 1.5rem
 
   .is-main
     flex: 1
-    overflow-x: hidden
 
 =logo($desk, $tab, $touch)
   +desktop
